[package]
name = "dhatu"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# substrate stuff ( must be synchronized as these modules does not follow semver!)
sp-core = { version = "21.0.0", features = ["full_crypto"] }
subxt = "0.29"
schnorrkel = "0.9.1"

# async stuff
futures = "0.3.28"
tokio = { version = "1.28.1", features = ["sync"] }
reqwest = { version = "0.11.17", features = ["json"] }

# data encoding
serde = { version = "1.0.160", features = ["derive"] }
tiny-keccak = { version = "2.0.2", features = ["sha3"] }
serde_json = "1.0.96"
hex = "0.4.3"
parity-scale-codec = "3.5.0"
rand = "0.8.5"

# custom erorr
thiserror = "1.0.40"

[dev-dependencies]
# mock substrate account
sp-keyring = "24.0.0"
# mock traits and structs
mockall = "0.11.4"

[features]
default = ["tokio", "serde"]
unstable = ["default", "unstable_sp_core", "subxt"]
tokio = []
serde = []
unstable_sp_core = []
subxt = []
