[package]
name = "dhatu"
version = "0.2.1"
edition = "2021"
license = "Apache-2.0"
description = "dhatu core libraries"
homepage = "https://github.com/zianksm/dhatu/tree/dev/dhatu#readme"
keywords = ["substrate", "dhatu", "dhatu-core", "mandala", "blockchain"]
exclude = ["tests"]
readme = "../README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# substrate stuff ( must be synchronized as these modules does not follow semver!)
sp-core = { version = "21.0.0", features = ["full_crypto", "std"] }
subxt = "0.29"
schnorrkel = "0.9.1"

# async stuff
futures = "0.3.28"
tokio = { version = "1.28.1", features = ["sync"] }
reqwest = { version = "0.11.17", features = ["json"] }

# data encoding
serde = { version = "1.0.160", features = ["derive"] }
tiny-keccak = { version = "2.0.2", features = ["sha3"] }
serde_json = "1.0.96"
hex = "0.4.3"
parity-scale-codec = "3.5.0"
rand = "0.8.5"

# mock substrate account
sp-keyring = { version = "24.0.0", optional = true }

# custom erorr
thiserror = "1.0.40"
rust_decimal = { version = "1.30.0", features = ["maths"] }

[dev-dependencies]
# mock traits and structs
mockall = "0.11.4"
# mock substrate account
sp-keyring = { version = "24.0.0" }
mockito = "1.0.2"
mandala-node-runner = { path = "../mandala-node-runner" }
dhatu = { path = "../dhatu", features = ["unstable"] }
# wabt = "0.10.0"

[features]
default = ["tokio", "serde"]
sp_keyring = []
asset_migration = []
unstable = ["default", "unstable_sp_core", "subxt", "sp-keyring", "asset_migration"]
tokio = []
serde = []
unstable_sp_core = []
subxt = []
